Fixed the no scroll bar on mobile. "hooray"

--- a/siteresources/socials.css
+++ b/siteresources/socials.css
@@ -221,6 +221,8 @@
 										animation: push 2s;
 										width: 100%;
 										height: 100%;
+										overflow-x: hidden;
+										overflow-y: visible;
 									}
 				.gone {
 								position: fixed;
@@ -241,14 +243,13 @@
 				@media (min-width: 250px) {
 																			html, body {
 																										height: 100%;
-																										overflow: visible;
 																										margin: 0%;
 																									}
 																			#header1 {
 																									font-size: 16px;
 																								}
 																			.smedia {
-																									margin-top: 80px;
+																									margin-top: 100px;
 																									margin-left: 50%;
 																									transform: translate(-50%);
 																								}
@@ -294,7 +295,7 @@
 																										}
 
 																			.bottom {
-																									display: none;
+																									display: block;
 																								}
 																		}
 
@@ -309,7 +310,7 @@
 																									font-size: 17px;
 																								}
 																			.smedia {
-																									margin-top: 70px;
+																									margin-top: 100px;
 																									margin-left: 50%;
 																									transform: translate(-50%);
 																								}
@@ -371,21 +372,21 @@
 																									font-size: 18px;
 																								}
 																			.smedia {
-																									margin-top: 250px;
-																									margin-left: 10%;
-																									transform: translate(-10%);
+																									margin-top: 100px;
+																									margin-left: 80%;
+																									transform: translate(-80%);
 																								}
 																			.contact {
-																								margin-top: -250px;
-																								margin-left: 85%;
-																								transform: translate(-85%);
+																								margin-top: 0px;
+																								margin-left: 20%;
+																								transform: translate(-20%);
 																								width: 305px;
 																							}
 																			.message {
 																										width: 305px;
-																										margin-left: 85%;
-																										transform: translate(-85%);
-																										margin-top: 70px;
+																										margin-left: 20%;
+																										transform: translate(-20%);
+																										margin-top: 30px;
 																									}
 
 																			.homebutt {
